--- a/package.json
+++ b/package.json
@@ -28,8 +28,16 @@
     "prepare": "husky install"
   },
   "dependencies": {
+    "@emotion/react": "^11.11.1",
+    "@emotion/styled": "^11.11.0",
+    "@mui/icons-material": "^5.14.11",
+    "@mui/material": "^5.14.11",
+    "@tanstack/react-query": "^4.35.3",
+    "@types/axios": "^0.14.0",
+    "axios": "^1.5.1",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "sonner": "^1.0.3"
   },
   "devDependencies": {
     "@commitlint/cli": "^17.7.1",
