--- a/package.json
+++ b/package.json
@@ -30,39 +30,39 @@
     "prepare": "husky install"
   },
   "dependencies": {
-    "@emotion/react": "^11.11.1",
-    "@emotion/styled": "^11.11.0",
-    "@mui/icons-material": "^5.14.11",
-    "@mui/material": "^5.14.11",
-    "@tanstack/react-query": "^4.35.3",
-    "@types/axios": "^0.14.0",
-    "axios": "^1.5.1",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "sonner": "^1.0.3"
+    "@emotion/react": "11.11.1",
+    "@emotion/styled": "11.11.0",
+    "@mui/icons-material": "5.14.11",
+    "@mui/material": "5.14.11",
+    "@tanstack/react-query": "4.35.3",
+    "@types/axios": "0.14.0",
+    "axios": "1.5.1",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
+    "sonner": "1.0.3"
   },
   "devDependencies": {
-    "@commitlint/cli": "^17.7.1",
-    "@commitlint/config-conventional": "^17.7.0",
-    "@testing-library/react": "^14.0.0",
-    "@trivago/prettier-plugin-sort-imports": "^4.2.0",
-    "@types/react": "^18.2.15",
-    "@types/react-dom": "^18.2.7",
-    "@typescript-eslint/eslint-plugin": "^6.0.0",
-    "@typescript-eslint/parser": "^6.0.0",
-    "@vitejs/plugin-react": "^4.1.0",
-    "@vitest/coverage-v8": "^0.34.6",
-    "eslint": "^8.45.0",
-    "eslint-config-prettier": "^9.0.0",
-    "eslint-plugin-react-hooks": "^4.6.0",
-    "eslint-plugin-react-refresh": "^0.4.3",
-    "happy-dom": "^12.8.0",
-    "husky": "^8.0.3",
-    "lint-staged": "^14.0.1",
-    "prettier": "^3.0.3",
-    "standard": "^17.1.0",
-    "typescript": "^5.0.2",
-    "vite": "^4.4.5",
-    "vitest": "^0.34.6"
+    "@commitlint/cli": "17.7.1",
+    "@commitlint/config-conventional": "17.7.0",
+    "@testing-library/react": "14.0.0",
+    "@trivago/prettier-plugin-sort-imports": "4.2.0",
+    "@types/react": "18.2.15",
+    "@types/react-dom": "18.2.7",
+    "@typescript-eslint/eslint-plugin": "6.0.0",
+    "@typescript-eslint/parser": "6.0.0",
+    "@vitejs/plugin-react": "4.1.0",
+    "@vitest/coverage-v8": "0.34.6",
+    "eslint": "8.45.0",
+    "eslint-config-prettier": "9.0.0",
+    "eslint-plugin-react-hooks": "4.6.0",
+    "eslint-plugin-react-refresh": "0.4.3",
+    "happy-dom": "12.8.0",
+    "husky": "8.0.3",
+    "lint-staged": "14.0.1",
+    "prettier": "3.0.3",
+    "standard": "17.1.0",
+    "typescript": "5.0.2",
+    "vite": "4.4.5",
+    "vitest": "0.34.6"
   }
 }
