--- a/package.json
+++ b/package.json
@@ -39,6 +39,8 @@
     "axios": "1.5.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-helmet": "6.1.0",
+    "react-router-dom": "6.16.0",
     "sonner": "1.0.3"
   },
   "devDependencies": {
@@ -48,6 +50,7 @@
     "@trivago/prettier-plugin-sort-imports": "4.2.0",
     "@types/react": "18.2.15",
     "@types/react-dom": "18.2.7",
+    "@types/react-helmet": "6.1.7",
     "@typescript-eslint/eslint-plugin": "6.0.0",
     "@typescript-eslint/parser": "6.0.0",
     "@vitejs/plugin-react": "4.1.0",
