--- a/tsconfig.json
+++ b/tsconfig.json
@@ -21,7 +21,7 @@
     "incremental": true,
     "baseUrl": "."
   },
-  "include": ["src"],
-  "exclude": ["node_modules", "build", "dist", "test", "coverage"],
+  "include": ["src", "test"],
+  "exclude": ["node_modules", "build", "dist", "coverage"],
   "references": [{ "path": "./tsconfig.node.json" }]
 }
